# tta-demo-app

./: .gitignore  Makefile  README.md  pyproject.toml
dataset/: download_cifar.sh  process_cifar.py
python/: app.py  dataset.py  test.ipynb
python/data/: __init__.py  dataloader.py  dataset.py
