[tool.poetry]
name = "tta-demo-app"
version = "0.1.0"
description = ""
authors = ["Aiden-Jeon <aiden.jongseob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.41.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
